--- a/ExordiumGames/Views/Shared/_Layout.cshtml
+++ b/ExordiumGames/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item" style="">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
                         </li>
+                        <li class="nav-item" style="">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="AppRoles" asp-action="Index">Roles</a>
+                        </li>
                     </ul>
                 </div>
             </div>
